# ABS-Fractal-Explorer

./: .gitignore  75 Mandelbrot Variants FORMULA ID Table.txt  CMakeLists.txt  LICENSE.txt  Programming-Style.txt  README.txt  keybinds.fracExpKB  keybinds.txt  makefile
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Linux/: ABS-Fractal-Explorer_v1-0-0  ABS-Fractal-Explorer_v1-0-2  Linux ReadMe.txt
Source/: README.txt  makefile
Source/src/: README.txt  RGB888.h  buildCL.cpp  buildCL.h  fileManager.cpp  fileManager.h  fracCL.cl  fracCL.cpp  fracCL.h  fracMulti.cpp  fracMulti.h  fracSingle.cpp  fracSingle.h  gamma.h  glslFrac.cpp  glslFrac.h  graphics2D.cpp  graphics2D.h  main.cpp  primeUX.cpp  primeUX.h  render.cpp  render.h
Source/src/legacy/: About_prime2D.txt  prime2D.cpp  prime2D.h
Windows/: Windows ReadMe.txt
assets/: LICENSE.txt
icons/: README.txt
imgui/: .gitignore  list.txt
src/: .gitignore  Common_Def.cpp  Common_Def.h  Keyboard_String_Codes.txt  Print_Log.cpp  Print_Log.h  Program_Def.cpp  Program_Def.h  bitGraphics.cpp  bitGraphics.h  bitGraphics_Font.h  buildCL.cpp  buildCL.h  copyBuffer.cpp  copyBuffer.h  displayInfo.cpp  displayInfo.h  display_GUI.cpp  display_GUI.h  engine.cpp  engine.h  fileManager.cpp  fileManager.h  fracCL.cl  fracCL.cpp  fracCL.h  fracExp.cpp  fracExp.h  fracExpKB.cpp  fracExpKB.h  fracExp_Internal.cpp  fracExp_Internal.h  fracMulti.cpp  fracMulti.h  fracParallel.cpp  fracParallel.h  fracSingle.cpp  fracSingle.h  frac_preprocessor.cpp  frac_preprocessor.h  (+26 more)
src/graphicsBuffer/: Graphics_Buffer.cpp  Graphics_Buffer.h  Graphics_Buffer_Internal.cpp  Graphics_Buffer_Internal.h
src/legacy/: prime2D.h
text/: Default-Key-Binds.fracExpKB  Docs-(fracExpConfig).md  Example-Key-binds.fracExpKB  FracExpKB_printf.txt  Keyboard_String_Codes.txt  config.fracExpConfig  foo.fracExpConfig
